# Ludere

./: .gitignore  CMakeLists.txt  README.md
include/ludere/: AbstractStrategy.hpp  CSV.hpp  CandlestickData.hpp  Core.hpp  DataRequestEvent.hpp  Engine.hpp  Event.hpp  Events.hpp  Exchange.hpp  FillEvent.hpp  FilledOrder.hpp  IDataEventSubscriber.hpp  IDataStreamer.hpp  IMarketEventSubscriber.hpp  Log.hpp  MarketEvent.hpp  MarketEventSubscriber.hpp  Order.hpp  OrderEvent.hpp  Portfolio.hpp  Position.hpp  Strategy.hpp  UUID.hpp  abstract_strategy.hpp  brokerage_fees.hpp  candlestick_data.hpp  core.hpp  data_event_subscribable.hpp  data_streamable.hpp  datastreamable.hpp  engine.hpp  event.hpp  events.hpp  exchange.hpp  filled_order.hpp  limit_order.hpp  log.hpp  market_event.hpp  market_event_subscribable.hpp  market_order.hpp  (+6 more)
scripts/: arrange_csv.py  cinclude2dot.pl
src/core/: Engine.cpp  Exchange.cpp  Portfolio.cpp  abstract_strategy.cpp  brokerage_fees.cpp  candlestick_data.cpp  engine.cpp  exchange.cpp  filled_order.cpp  limit_order.cpp  market_order.cpp  order.cpp  portfolio.cpp  position.cpp
src/events/: FillEvent.cpp  MarketEvent.cpp
src/ludere_private/: Log.hpp  MarketEventSubscriber.hpp  UUID.hpp
test/: CMakeLists.txt
